--- a/404.html
+++ b/404.html
@@ -41,7 +41,7 @@
   
   
   
-  <meta name="theme-color" content="#4caf50">
+  <meta name="theme-color" content="#EF525B">
   
 
   
@@ -82,7 +82,7 @@
   
   
   
-  <link rel="stylesheet" href="/css/academic.min.ccbec487a655e97d27a94f72a95624bb.css">
+  <link rel="stylesheet" href="/css/academic.min.a099f16fd6066441e52658debb539cd5.css">
 
   
 
@@ -129,12 +129,12 @@
     window.cookieconsent.initialise({
       "palette": {
         "popup": {
-          "background": "#4caf50",
-          "text": "#fff"
+          "background": "#EF525B",
+          "text": "#EAE7D6"
         },
         "button": {
-          "background": "#fff",
-          "text": "#4caf50"
+          "background": "#EAE7D6",
+          "text": "#EF525B"
         }
       },
       "theme": "classic",
