--- a/404.html
+++ b/404.html
@@ -425,6 +425,13 @@
   
   
   
+  <h2>Latest</h2>
+  <ul>
+    
+      <li><a href="/publication/eh-wsn/">An example conference paper</a></li>
+    
+  </ul>
+  
 
 </div>
 
