Cleaning a little bit

--- a/publication/index.html
+++ b/publication/index.html
@@ -535,13 +535,15 @@
 
 
   
-    
+  <a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="/project/eh-wsn/">
+    Project
+  </a>
   
 
 
 
 
-  
+
 
 
 
