--- a/index.html
+++ b/index.html
@@ -1262,13 +1262,15 @@
 
 
   
-    
+  <a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="/project/eh-wsn/">
+    Project
+  </a>
   
 
 
 
 
-  
+
 
 
 
