--- a/publication/cpsws2019/index.html
+++ b/publication/cpsws2019/index.html
@@ -614,13 +614,15 @@
 
 
   
-    
+  <a class="btn btn-outline-primary my-1 mr-1" href="/project/eh-wsn/">
+    Project
+  </a>
   
 
 
 
 
-  
+
 
 
 
@@ -679,26 +681,25 @@
 
     <div class="space-below"></div>
 
-    <div class="article-style"><div class="alert alert-note">
-  <div>
-    Click the <em>Cite</em> button above to demo the feature to enable visitors to import publication metadata into their reference management software.
-  </div>
-</div>
-
-<div class="alert alert-note">
-  <div>
-    Click the <em>Slides</em> button above to demo Academic&rsquo;s Markdown slides feature.
-  </div>
-</div>
-
-<p>Supplementary notes can be added here, including <a href="https://sourcethemes.com/academic/docs/writing-markdown-latex/" target="_blank">code and math</a>.</p>
-</div>
+    <div class="article-style"></div>
 
     
 
 <div class="article-tags">
   
-  <a class="badge badge-light" href="/tags/energy-harvesting-waste-heat-wsn-iiot-routing-protocols-mesh-networks-reinforcement-learning/">Energy Harvesting, Waste Heat, WSN, IIoT, Routing Protocols, Mesh Networks, Reinforcement Learning</a>
+  <a class="badge badge-light" href="/tags/energy-harvesting/">Energy Harvesting</a>
+  
+  <a class="badge badge-light" href="/tags/waste-heat/">Waste Heat</a>
+  
+  <a class="badge badge-light" href="/tags/wsn/">WSN</a>
+  
+  <a class="badge badge-light" href="/tags/iiot/">IIoT</a>
+  
+  <a class="badge badge-light" href="/tags/routing-protocols/">Routing Protocols</a>
+  
+  <a class="badge badge-light" href="/tags/mesh-networks/">Mesh Networks</a>
+  
+  <a class="badge badge-light" href="/tags/reinforcement-learning/">Reinforcement Learning</a>
   
 </div>
 
