--- a/publication/cpsws2019/index.html
+++ b/publication/cpsws2019/index.html
@@ -454,7 +454,7 @@
 
 
 
-  <span itemprop="author name" itemtype="http://schema.org/Person"><a href="/authors/admin/">Roger N. Alegret</a></span>, <span itemprop="author name" itemtype="http://schema.org/Person"><a href="/authors/r.-aragones/">R. Aragonés</a></span>, <span itemprop="author name" itemtype="http://schema.org/Person"><a href="/authors/c.-ferrer/">C. Ferrer</a></span>
+  <span itemprop="author name" itemtype="http://schema.org/Person"><a href="/authors/admin/">Roger N. Alegret</a></span>, <span itemprop="author name" itemtype="http://schema.org/Person"><a href="/authors/raul-aragones/">Raül Aragonés</a></span>, <span itemprop="author name" itemtype="http://schema.org/Person"><a href="/authors/carles-ferrer/">Carles Ferrer</a></span>
 
   </div>
   
