--- a/publication/cpsws2019/index.html
+++ b/publication/cpsws2019/index.html
@@ -82,7 +82,7 @@
   
   
   
-  <link rel="stylesheet" href="/css/academic.min.82f2f14b38a8da79a851c636055b0d10.css">
+  <link rel="stylesheet" href="/css/academic.min.c66516cf97186fe7fa872ca1f0e4401a.css">
 
   
 
@@ -454,7 +454,7 @@
 
 
 
-  <span itemprop="author name" itemtype="http://schema.org/Person"><a href="/authors/admin/">Roger N. Alegret</a></span>, <span itemprop="author name" itemtype="http://schema.org/Person"><a href="/authors/r.-aragones/">R. Aragonés</a></span>, <span itemprop="author name" itemtype="http://schema.org/Person"><a href="/authors/c.-ferrer/">C. Ferrer</a></span>
+  <span itemprop="author name" itemtype="http://schema.org/Person"><a href="/authors/admin/">Roger N. Alegret</a></span>, <span itemprop="author name" itemtype="http://schema.org/Person"><a href="/authors/raul-aragones/">Raül Aragonés</a></span>, <span itemprop="author name" itemtype="http://schema.org/Person"><a href="/authors/carles-ferrer/">Carles Ferrer</a></span>
 
   </div>
   
@@ -768,7 +768,7 @@
             
           
           <li>
-            <a itemprop="sameAs" href="https://scholar.google.com/citations?user=" target="_blank" rel="noopener">
+            <a itemprop="sameAs" href="https://scholar.google.com/citations?user=HlyMSqAAAAAJ" target="_blank" rel="noopener">
               <i class="ai ai-google-scholar"></i>
             </a>
           </li>
@@ -917,7 +917,7 @@
   
 
   <p class="powered-by">
-    &copy;2019 &middot; 
+    ©2020 &middot; 
 
     Powered by the
     <a href="https://sourcethemes.com/academic/" target="_blank" rel="noopener">Academic theme</a> for
